--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -181,7 +181,8 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: var(--color-green);
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.3);
     color: #fff;
 
     opacity: 0;
@@ -191,13 +192,8 @@
 }
 
 
-.wrapper.active {
-  overflow: hidden;
-  background-color: grey;
-  position: relative;
+.active {
+  opacity: 1;
+  pointer-events: all;
 
-  & .header__menu {
-    opacity: 1;
-    pointer-events: all;
-  }
 }
