--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -102,7 +102,7 @@
     aspect-ratio: 1;
     background-color: var(--color-gray);
     border-radius: 50%;
-    transition: all 0.2s;
+    transition: all var(--transition-duration);
 
     @include hover {
       background-color: var(--color-green);
