--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -26,7 +26,7 @@
 
   &__logo {
     cursor: pointer;
-    transition: all 0.5s;
+    transition: all var(--transition-duration);
 
     @include hover {
       transform: scale(1.2) rotate(360deg);
@@ -41,7 +41,7 @@
 
   &__facebook,
   &__instagram {
-    transition: all 0.3s;
+    transition: all var(--transition-duration);
 
     @include hover {
       color: var(--color-green);
@@ -179,7 +179,7 @@
     top: 50px;
     bottom: 15px;
     left: 100%;
-    transition: all 0.3s;
+    transition: all var(--transition-duration);
 
     @include hover {
       background-color: var(--color-gray-alt);
