--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -80,5 +80,11 @@
     }
   }
 
-  &__button {}
+  &__button {
+    transition: all var(--transition-duration);
+
+    @include hover {
+      box-shadow: -4px -4px 1px #f35555;
+    }
+  }
 }
