--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -39,8 +39,8 @@
     cursor: pointer;
   }
 
-  &__facebook,
-  &__instagram {
+  &__facebook svg,
+  &__instagram svg {
     transition: all var(--transition-duration);
 
     @include hover {
@@ -149,6 +149,14 @@
       }
     }
 
+    &-link {
+      transition: all var(--transition-duration);
+
+      @include hover {
+        color: var(--color-green);
+        opacity: 0.7;
+      }
+    }
   }
 
   &__bottom {
