--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -14,20 +14,22 @@
     @include desktop-above {
       margin-bottom: 56px;
     }
+
   }
 
   &__inner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 20px;
+    display: none;
 
-    overflow-x: hidden;
-
-
-    @include tablet-above {
+    @include desktop-above {
       row-gap: 32px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      row-gap: 20px;
+
+      overflow-x: hidden;
     }
+
 
   }
 
@@ -37,6 +39,12 @@
     width: 100%;
     height: 100%;
     max-height: 410px;
+    cursor: zoom-in;
+    transition: all var(--transition-duration);
+
+    @include hover {
+      scale: 1.05;
+    }
 
     @include tablet-above {
       max-height: 543px;
