--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -109,6 +109,11 @@
     display: flex;
     justify-content: space-between;
     align-items: end;
+
+    @include desktop-above {
+      width: 100%;
+    }
+
   }
 
   &__action {
@@ -143,14 +148,26 @@
     min-width: 270px;
     max-width: 280px;
     border: var(--border);
+    transition: all var(--transition-duration);
 
     @include tablet-above {
       height: 70px;
     }
+
+    &-name {
+      margin-inline: auto;
+    }
+
+
+    @include hover {
+      opacity: 0.9;
+      background-color: var(--color-accent);
+      ;
+    }
   }
 
-  &__link {
-    margin-inline: auto;
+  &__button {
+    z-index: -1;
   }
 
   &__bg {
@@ -162,11 +179,14 @@
     bottom: 0;
     left: 0;
     max-height: 300px;
+    max-width: 100%;
 
     @include tablet-above {
       width: 50%;
       left: 50%;
       max-height: 432px;
+      max-width: 750px;
+
     }
 
     @include desktop-above {
