--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -5,7 +5,7 @@ body {
   font-weight: 400;
   line-height: 1.28;
   color: var(--color-dark);
-  background-color: var(--color-gray-light);
+  background-color: #fff;
 
   // overflow: hidden;
   // background: grey;
@@ -47,11 +47,12 @@ body {
   width: 50px;
   border: none;
   right: -2px;
+  cursor: pointer;
 
   @include tablet-above {
     height: 70px;
     width: 70px;
-    right: 0;
+    // right: 0;
   }
 
   &--color-green {
