--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,7 +11,7 @@
 @import 'blocks/gallery';
 @import 'blocks/subscribe';
 @import 'blocks/footer';
-@import 'blocks/swiper';
+@import 'blocks/slider';
 
 
 .visually-hidden {
