--- a/src/styles/blocks/_slider.scss
+++ b/src/styles/blocks/_slider.scss
@@ -1,20 +1,83 @@
-.swiper {
+/* Слайдер */
+.slick-slider {
 
+  /* Слайдер запущений */
+  &.slick-initialized {}
 
-  @include desktop-above {
-    display: none;
-  }
+  /* Слайдер з крапками */
+  &.slick-dotted {}
+}
 
-  &-wrapper {}
+/* Обмежувальна оболонка */
+.slick-list {
+  overflow-x: hidden;
+}
 
-  &-slide {
+/* Стрічка слайдів */
+.slick-track {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
 
-    & img {
-      width: 100%;
+/* Слайд */
+.slick-slide {
+
+  /* Слайд активний (показується) */
+  &.slick-active {}
+
+  /* Слайд основний */
+  &.slick-current {}
+
+  /* Слайд по центру */
+  &.slick-center {}
+
+  /* Клонований слайд */
+  &.slick-cloned {}
+
+}
+
+/* Точки (буліти) */
+.slick-dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  font-size: 0;
+  gap: 10px;
+  padding-top: 20px;
+
+  li {
+
+    /* Активна точка */
+    &.slick-active {
+
+      & button {
+        background-color: green;
+
+      }
+    }
+
+    /* Елемент точки */
+    & button {
+      width: 10px;
+      height: 10px;
+      background-color: grey;
+      border-radius: 50%;
     }
   }
 
-  &-pagination {
-    bottom: -30px;
+
+}
+
+/* Конкретний слайдер*/
+.slider {
+  padding: 0 5px;
+
+  &__item {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
