--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -1,9 +1,6 @@
 .footer {
-  display: none;
-
   padding-block: 50px;
   color: var(--color-dark-alt);
-
 
   &__inner {
     @include grid-template;
@@ -22,7 +19,7 @@
       grid-column: span 1;
       flex-direction: column;
       justify-content: start;
-      gap: 62px
+      gap: 62px;
     }
   }
 
@@ -51,7 +48,6 @@
     }
   }
 
-
   &__schedule {
     grid-column: span 1;
     max-width: 220px;
@@ -63,7 +59,6 @@
     @include desktop-above {
       grid-column: 3/5;
     }
-
   }
 
   &__contacts {
@@ -94,10 +89,9 @@
       }
 
       &:not(:last-child) {
-        margin-bottom: 0px;
+        margin-bottom: 0;
       }
     }
-
   }
 
   &__name {
@@ -113,14 +107,6 @@
   &__address {
     font-style: normal;
   }
-
-  &__tel {}
-
-  &__fax {}
-
-  &__email {}
-
-  &__decor {}
 
   &__menu {
     grid-column: 1/-1;
@@ -147,7 +133,7 @@
       padding-top: 0;
 
       &:not(:last-child) {
-        margin-bottom: 0px;
+        margin-bottom: 0;
       }
     }
 
@@ -194,7 +180,7 @@
     @include hover {
       background-color: var(--color-gray-alt);
 
-      :after {
+      &:after {
         color: #fff;
       }
     }
