--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,7 +1,6 @@
 .header {
   padding-bottom: 0;
 
-
   @include tablet-above {
     padding-bottom: 3px;
   }
@@ -59,7 +58,6 @@
 
   &__main {
     @include grid-template;
-
   }
 
   &__left {
@@ -113,7 +111,6 @@
     @include desktop-above {
       width: 100%;
     }
-
   }
 
   &__action {
@@ -158,11 +155,9 @@
       margin-inline: auto;
     }
 
-
     @include hover {
       opacity: 0.9;
       background-color: var(--color-accent);
-      ;
     }
   }
 
@@ -175,7 +170,7 @@
 
     position: absolute;
     z-index: -1;
-    top: 0px;
+    top: 0;
     bottom: 0;
     left: 0;
     max-height: 300px;
@@ -186,7 +181,6 @@
       left: 50%;
       max-height: 432px;
       max-width: 750px;
-
     }
 
     @include desktop-above {
@@ -198,22 +192,16 @@
 
   &__menu {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
     background-color: rgba(0, 0, 0, 0.3);
     color: #fff;
 
     opacity: 0;
     pointer-events: none;
-
   }
 }
-
 
 .active {
   opacity: 1;
   pointer-events: all;
-
 }
