--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -52,17 +52,14 @@
   }
 
   &__bg {
-
     background-color: green;
   }
 
   &__wrapper {
-
     display: flex;
     padding-top: 26px;
     padding-bottom: 26px;
     flex-direction: column;
-
 
     @include tablet-above {
       padding-top: 40px;
@@ -87,16 +84,14 @@
     border-bottom: 1px solid #fff;
 
     @include tablet-above {
-      margin-bottom: 0px;
-      padding-bottom: 0px;
+      margin-bottom: 0;
+      padding-bottom: 0;
       border-bottom: none;
     }
   }
 
   &__schedule {
     flex: 1 1 55%;
-
-
 
     @include tablet-above {
       display: flex;
