--- a/src/styles/blocks/_slider.scss
+++ b/src/styles/blocks/_slider.scss
@@ -1,36 +1,13 @@
-/* Слайдер */
-.slick-slider {
-
-  /* Слайдер запущений */
-  &.slick-initialized {}
-
-  /* Слайдер з крапками */
-  &.slick-dotted {}
-}
-
-/* Обмежувальна оболонка */
+/* Слайдер  Обмежувальна оболонка */
 .slick-list {
   overflow-x: hidden;
 }
 
-
 /* Слайд */
 .slick-slide {
-
-  /* Слайд активний (показується) */
   &.slick-active {
     display: flex;
   }
-
-  /* Слайд основний */
-  &.slick-current {}
-
-  /* Слайд по центру */
-  &.slick-center {}
-
-  /* Клонований слайд */
-  &.slick-cloned {}
-
 }
 
 /* Точки (буліти) */
@@ -44,30 +21,22 @@
   padding-top: 20px;
 
   li {
-
-    /* Активна точка */
-    &.slick-active {
-
-      & button {
-        background-color: green;
-
-      }
-    }
-
-    /* Елемент точки */
-    & button {
+    button {
       width: 10px;
       height: 10px;
       background-color: var(--color-gray-light);
       border-radius: 50%;
       border: none;
     }
+
+    &.slick-active {
+      & button {
+        background-color: green;
+      }
+    }
   }
-
-
 }
 
-/* Конкретний слайдер*/
 .slider {
   padding: 0 5px;
 
@@ -82,14 +51,11 @@
     display: none;
   }
 
-
   /* Стрічка слайдів */
   & .slick-track {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     gap: 15px;
-
   }
-
 }
