--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -9,7 +9,6 @@ body {
 
   // overflow: hidden;
   // background: grey;
-
 }
 
 .container {
@@ -18,16 +17,13 @@ body {
   padding-inline: var(--container-padding-x);
 
   @include tablet-above {
-    --container-padding-x: 39px
+    --container-padding-x: 39px;
   }
 
   @include desktop-above {
-    --container-padding-x: 55px
+    --container-padding-x: 55px;
   }
 }
-
-
-
 
 .title {
   font-family: var(--font-family-second);
@@ -81,9 +77,7 @@ body {
       width: 10px;
       height: 12px;
     }
-
   }
-
 
   &::after {
     content: '';
@@ -93,7 +87,6 @@ body {
     translate: -50% -50%;
     width: 7px;
     height: 12px;
-
   }
 }
 
@@ -105,5 +98,4 @@ body {
   font-size: 36px;
   letter-spacing: 0;
   line-height: 1;
-
 }
