--- a/src/styles/utils/_normalize.scss
+++ b/src/styles/utils/_normalize.scss
@@ -28,16 +28,7 @@ body,
    Убираем внешние отступы вертикали нужным тегам,
    у которых есть атрибут class
   */
-:where(h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p,
-  ul,
-  ol,
-  dl):where([class]) {
+:where(h1, h2, h3, h4, h5, h6, p, ul, ol, dl):where([class]) {
   margin-block: 0;
 }
 
@@ -77,7 +68,6 @@ p {
 p:where(:not([class]):not(:last-child)) {
   margin-bottom: var(--paragraphMarginBottom);
 }
-
 
 /**
    Упрощаем работу с изображениями
@@ -139,11 +129,11 @@ body {
    Приводим к единому цвету svg-элементы
   */
 svg *[fill] {
-  fill: currentColor
+  fill: currentColor;
 }
 
 svg *[stroke] {
-  stroke: currentColor
+  stroke: currentColor;
 }
 
 /**
