--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -54,7 +54,7 @@
 }
 
 @font-face {
-  font-family: 'Montserrat';
+  font-family: Montserrat;
   src: url('../fonts/Montserrat-Bold.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
@@ -62,7 +62,7 @@
 }
 
 @font-face {
-  font-family: 'Montserrat';
+  font-family: Montserrat;
   src: url('../fonts/Montserrat-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
@@ -70,7 +70,7 @@
 }
 
 @font-face {
-  font-family: 'Montserrat';
+  font-family: Montserrat;
   src: url('../fonts/Montserrat-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
