--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -1,9 +1,6 @@
 .subscribe {
-
-
   padding-block: 88px;
   background: url(../images/subscribe-bg.jpg) center/cover no-repeat;
-
 
   @include tablet-above {
     padding-block: 82px;
@@ -13,11 +10,9 @@
     padding-block: 163px;
   }
 
-
   &__inner {
     @include grid-template;
     text-align: center;
-
   }
 
   &__info {
@@ -29,14 +24,12 @@
 
     @include tablet-above {
       grid-column: 2/6;
-
     }
 
     @include desktop-above {
       grid-column: 4/10;
       column-gap: 16px;
     }
-
   }
 
   &__title {
@@ -50,14 +43,13 @@
 
   &__form {
     display: flex;
-    column-gap: 0px;
+    column-gap: 0;
     grid-column: 1/-1;
     justify-content: center;
 
     @include tablet-above {
       grid-column: 2/6;
       column-gap: 10px;
-
     }
 
     @include desktop-above {
@@ -72,7 +64,6 @@
     display: flex;
     align-items: center;
     flex: 0 1 230px;
-
 
     @include tablet-above {
       height: 70px;
