--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,17 +1,17 @@
 :root {
   --color-dark: #000000;
-  --color-dark-alt: #0F0E08;
-  --color-green: #1A5A4C;
+  --color-dark-alt: #0f0e08;
+  --color-green: #1a5a4c;
   --color-accent: #b9ff66;
-  --color-gray: #4E4E4E;
+  --color-gray: #4e4e4e;
   --color-gray-alt: #687480;
-  --color-gray-light: #E5E5E5;
-  --color-orange: #F14A27;
+  --color-gray-light: #e5e5e5;
+  --color-orange: #f14a27;
 
   --border: 1px solid var(--color-green);
 
-  --font-family-base: "IBM Plex Sans", sans-serif;
-  --font-family-second: "Montserrat", sans-serif;
+  --font-family-base: 'IBM Plex Sans', sans-serif;
+  --font-family-second: 'Montserrat', sans-serif;
 
   --container-width: 1170px;
   --container-padding-x: 20px;
@@ -23,5 +23,4 @@
   --button-height: 70px;
 
   --transition-duration: 0.3s;
-
 }
