--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -178,14 +178,14 @@
     transition: all var(--transition-duration);
 
     @include hover {
-      background-color: var(--color-gray-alt);
+      background-color: var(--color-gray-light);
 
-      &:after {
-        color: #fff;
+      &::after {
+        transform: scale(2);
       }
     }
 
-    @include tablet-above {
+    @include desktop-above {
       display: none;
     }
   }
