--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -122,7 +122,11 @@
     text-align: right;
     display: none;
 
-    &:before {
+    @include desktop-above {
+      display: flex;
+    }
+
+    &::before {
       content: '';
       position: absolute;
       top: 7px;
@@ -130,10 +134,6 @@
       width: 70px;
       height: 1px;
       background-color: var(--color-green);
-    }
-
-    @include desktop-above {
-      display: flex;
     }
   }
 
