--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -15,7 +15,7 @@
     position: relative;
     transition: all var(--transition-duration);
 
-    &:after {
+    &::after {
       content: '';
       position: absolute;
       width: 0;
