--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -12,6 +12,7 @@
 
   &__inner {
     @include grid-template;
+
     text-align: center;
   }
 
@@ -75,7 +76,8 @@
     transition: all var(--transition-duration);
 
     @include hover {
-      box-shadow: -4px -4px 1px #f35555;
+      box-shadow: -1px -1px 1px #f35555;
+      scale: 1.05;
     }
   }
 }
