--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -48,7 +48,6 @@ body {
   @include tablet-above {
     height: 70px;
     width: 70px;
-    // right: 0;
   }
 
   &--color-green {
@@ -87,6 +86,7 @@ body {
     translate: -50% -50%;
     width: 7px;
     height: 12px;
+    transition: all var(--transition-duration);
   }
 }
 
