--- a/src/styles/utils/_normalize.scss
+++ b/src/styles/utils/_normalize.scss
@@ -51,25 +51,6 @@ body,
 }
 
 /**
-   Обнуляем вертикальные внешние отступы параграфа,
-   объявляем локальную переменную для внешнего отступа вниз,
-   чтобы избежать взаимодействие с более сложным селектором
-  */
-p {
-  --paragraphMarginBottom: 24px;
-
-  margin-block: 0;
-}
-
-/**
-   Внешний отступ вниз для параграфа без атрибута class,
-   который расположен не последним среди своих соседних элементов
-  */
-p:where(:not([class]):not(:last-child)) {
-  margin-bottom: var(--paragraphMarginBottom);
-}
-
-/**
    Упрощаем работу с изображениями
   */
 img {
@@ -107,21 +88,19 @@ html {
      (когда, например, нужно будет "прижать" футер к низу сайта)
     */
   height: 100%;
-  /**
-     Плавный скролл
-    */
+
+  /* Плавный скролл */
   scroll-behavior: smooth;
 }
 
 body {
-  /**
-     Пригодится в большинстве ситуаций
+  /* Пригодится в большинстве ситуаций
      (когда, например, нужно будет "прижать" футер к низу сайта)
     */
+
   min-height: 100%;
-  /**
-     Унифицированный интерлиньяж
-    */
+
+  /* Унифицированный интерлиньяж */
   line-height: 1.5;
 }
 
