--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,7 @@
 :root {
-  --color-dark: #000000;
+  /* colors */
+
+  --color-dark: #000;
   --color-dark-alt: #0f0e08;
   --color-green: #1a5a4c;
   --color-accent: #b9ff66;
@@ -8,19 +10,14 @@
   --color-gray-light: #e5e5e5;
   --color-orange: #f14a27;
 
-  --border: 1px solid var(--color-green);
+  /* globals */
 
+  --border: 1px solid var(--color-green);
   --font-family-base: 'IBM Plex Sans', sans-serif;
   --font-family-second: 'Montserrat', sans-serif;
-
   --container-width: 1170px;
   --container-padding-x: 20px;
-
-  // --section-padding-y: 70px;
-  // --shadow: 0 5px 0 0 var(--color-dark);
-
   --input-height: 70px;
   --button-height: 70px;
-
   --transition-duration: 0.3s;
 }
