--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
+$mobile-min-width: 320px;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$design-max-width: 1280px;
+$main-accent-color: #1a5a4c;
+$second-accent-color: #f14a27;
+$main-text-color: #0f0e08;
+$helper-text-color: #687480;
 $c-gray: #eee;
+$transition-duration: 0.3s;
