--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -18,6 +18,7 @@
   }
 
   &:has(.page__menu:target) {
+    overflow: hidden; /* not to scroll the page */
     &::after {
       opacity: 1;
       visibility: visible;
@@ -31,7 +32,7 @@
   transition: all $transition-duration;
 
   &__menu {
-    position: fixed;
+    position: absolute;
     background-color: $main-accent-color;
     width: 100%;
     top: -100%;
