--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -58,6 +58,7 @@
     width: 100%;
     height: 50px;
     transition: all $transition-duration;
+    cursor: pointer;
 
     outline: none;
     color: $main-text-color;
@@ -87,6 +88,7 @@
     background-repeat: no-repeat;
     background-position: center;
     z-index: 20;
+    cursor: pointer;
 
     @include on-tablet {
       height: 70px;
