--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,25 @@
-%h1 {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
+/* Padding inline */
+
+%paddingInline {
+  padding-inline: $padding-inline-mobile;
+  @include onTablet {
+    padding-inline: $padding-inline-tablet;
+  }
+  @include onDesktop {
+    padding-inline: $padding-inline-desktop;
+  }
+}
+
+/* Flex-column */
+
+%flexColumn {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Flex-row */
+
+%flexRow {
+  display: flex;
+  flex-direction: row;
 }
