--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,20 @@
-$c-gray: #eee;
+/* Breakpoints */
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+
+/*padding inline*/
+$padding-inline-mobile: 20px;
+$padding-inline-tablet: 39px;
+$padding-inline-desktop: 55px;
+
+/* Colors */
+$text-color: #0f0e08;
+$main-green: #1a5a4c;
+$text-grey: #687480;
+$second-grey: #4e4e4e;
+$main-red: #f14a27;
+$slider-dots-color: #e0e0e0;
+
+/* Fonts */
+$first-font: 'Montserrat', sant-serif;
+$second-font: 'IBM Plex Sans', sant-serif;
