--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,8 @@
 @import 'fonts';
 @import 'typography';
 
-body {
-  background: $c-gray;
-}
+@import '../styles/blocks/nav';
+@import '../styles/blocks/hero';
+@import '../styles/blocks/menu';
+@import '../styles/blocks/page';
+
