--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,10 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import '../styles/blocks/reset';
 @import '../styles/blocks/nav';
 @import '../styles/blocks/hero';
 @import '../styles/blocks/menu';
 @import '../styles/blocks/page';
+@import '../styles/blocks/main-info';
 
