made landing page museum

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,34 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/header';
+@import './blocks/logo';
+@import './blocks/slider-menu';
+@import './blocks/icon';
+@import './blocks/page';
+@import './blocks/menu';
+@import './blocks/event';
+@import './blocks/events';
+@import './blocks/gallery';
+@import './blocks/slider';
 
 body {
-  background: $c-gray;
+  background-color: $c-gray;
+  margin: 0;
+  font-family: 'IBM Plex Sans', serif;
+  position: relative;
+  // overflow: hidden;
+
+  // &:has(.slider-menu:target) {
+  //   filter: brightness(0.5);
+  // }
+}
+
+img {
+  max-width: 100%;
+}
+
+p, h1, h2, h3 {
+  margin: 0;
+  padding: 0;
 }
