--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,7 @@
 %h1 {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
+  font-family: Montserrat, serif;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 45px;
+  text-align: center;
 }
