--- a/src/styles/blocks/main-info.scss
+++ b/src/styles/blocks/main-info.scss
@@ -1,36 +1,91 @@
 .main {
   @include page-grid;
+  grid-column: 1 / -1;
   margin-top: 70px;
 
-  h2 {
+  &__title {
     grid-column: 1 / -1;
-    font-size: 40px;
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 700;
+    text-align: center;
   }
 
-  &__current-events-item-img {
-    img {
-      width: 280px;
-      height: 210px;
-    }
-  }
-
-  &__current-events-item-data {
+  &__current-events {
     grid-column: 1 / -1;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+    gap: 60px;
 
-    &-title {
-      font-size: 16px;
-      font-weight: 500;
-      color: #687480;
-    }
+    &-item {
+      &-img {
+        img {
+          height: 210px;
+          aspect-ratio: 16 / 9;
+          width: 100%;
+          object-fit: cover;
 
-    &-time {
-      font-size: 16px;
-      font-weight: 600;
-      color: #1a5a4c;
+          @include on-tablet {
+            height: 520px;
+          }
+        }
+      }
+
+      &-data {
+        grid-column: 1 / -1;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 20px;
+
+        @include on-tablet {
+          grid-column: 1 / 2;
+        }
+
+        &-title {
+          font-size: 16px;
+          font-weight: 500;
+          color: #687480;
+        }
+
+        &-time {
+          font-size: 16px;
+          font-weight: 600;
+          color: #1a5a4c;
+        }
+      }
+
+      &-title {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 28px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 10px;
+        div {
+          width: 10px;
+          height: 10px;
+          background-color: #f14a27;
+        }
+
+
+        @include on-tablet {
+          grid-column: 1 / 3;
+        }
+      }
+
+      &-text {
+        font-size: 16px;
+        line-height: 24px;
+        color: #4e4e4e;
+        margin-top: 10px;
+
+
+        @include on-tablet {
+          grid-column: 1 / 3;
+        }
+      }
     }
   }
 }
