--- a/src/styles/blocks/main-info.scss
+++ b/src/styles/blocks/main-info.scss
@@ -69,7 +69,6 @@
           background-color: #f14a27;
         }
 
-
         @include on-tablet {
           grid-column: 1 / 3;
         }
@@ -81,11 +80,33 @@
         color: #4e4e4e;
         margin-top: 10px;
 
-
         @include on-tablet {
           grid-column: 1 / 3;
         }
       }
+    }
+  }
+
+  &__lection {
+    grid-column: 1 / -1;
+
+    &-img {
+      height: 210px;
+      aspect-ratio: 16 / 9;
+      width: 100%;
+      object-fit: cover;
+
+      @include on-tablet {
+        height: 520px;
+      }
+    }
+
+    &-info {
+      grid-column: 1 / -1;
+      background-color: #fff;
+      height: 140px;
+      border-bottom: 2px solid #000;
+      margin-top: -153px;
     }
   }
 }
