Made landing page Museum

--- a/src/styles/blocks/_event.scss
+++ b/src/styles/blocks/_event.scss
@@ -47,6 +47,13 @@
     @include on-tablet {
       min-height: 390px;
     }
+
+    @include on-desktop {
+      max-height: 550px;
+      object-fit: cover;
+      object-position: bottom;
+      width: 100vw;
+    }
   }
 
   &__img {
@@ -72,12 +79,11 @@
       box-shadow: 0 2px rgba(26, 90, 76, 0.25);
       max-width: 280px;
       translate: 0 -56px;
-      box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
       padding-top: 24px;
 
       @include on-tablet {
         flex-direction: column;
-        max-width: 570px;
+        min-width: 570px;
         padding: 45px 55px 50px;
         display: flex;
         translate: 0 -95px;
@@ -94,7 +100,6 @@
 
     &--lecture {
       display: flex;
-      justify-content: space-between;
       margin-bottom: 24px;
       gap: 0;
       justify-content: space-evenly;
