--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -2,4 +2,6 @@
   background-image: url('../images/ri-close-fill.svg');
   width: 24px;
   height: 24px;
+
+  @include hover(transform, scale(1.05));
 }
