--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,24 +11,29 @@
 @import './blocks/events';
 @import './blocks/gallery';
 @import './blocks/slider';
+@import './blocks/subscribe';
+@import './blocks/footer';
+@import './blocks/footer-menu';
 
 body {
   background-color: $c-gray;
   margin: 0;
   font-family: 'IBM Plex Sans', serif;
   position: relative;
-  // overflow: hidden;
+}
 
-  // &:has(.slider-menu:target) {
-  //   filter: brightness(0.5);
-  // }
+body:has(.page:target) .footer__button-up {
+  display: flex;
 }
 
 img {
   max-width: 100%;
 }
 
-p, h1, h2, h3 {
+p,
+h1,
+h2,
+h3 {
   margin: 0;
   padding: 0;
 }
