--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -2,7 +2,7 @@
   @include on-tablet {
     position: relative;
     margin-bottom: 88px;
-    
+
     @include page-grid;
   }
 
@@ -42,6 +42,8 @@
     position: absolute;
     top: 27px;
 
+    @include hover(transform, scale(1.05));
+
     @include on-tablet {
       top: 39px;
     }
@@ -69,7 +71,7 @@
     }
   }
 
-  &__action{
+  &__action {
     display: none;
 
     @include on-desktop {
@@ -87,6 +89,10 @@
       transform: rotate(180deg);
       color: rgba(104, 116, 128, 1);
 
+      &:hover {
+        transform: rotate(180deg) scale(1.05);
+      }
+
       &::before {
         content: '';
         width: 1px;
@@ -97,7 +103,7 @@
   }
 
   &__title {
-    margin: 20px 0 20px;
+    margin: 20px 0;
 
     @include on-tablet {
       text-align: left;
@@ -120,11 +126,15 @@
     border: 1px solid #1a5a4c;
     width: 100%;
     height: 50px;
-    padding: 0 80px 0;
+    padding: 0 80px;
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
     position: relative;
+
+    &:hover {
+      @include hover(transform, scale(1.05));
+    }
 
     &::after {
       content: '';
