--- a/src/styles/blocks/_logo.scss
+++ b/src/styles/blocks/_logo.scss
@@ -4,18 +4,53 @@
   align-items: center;
   padding-top: 9px;
 
-  @include on-tablet {
-    height: 72px;
-    width: 220px;
-    padding-top: 15px;
-  }
+  &__menu {
+    @include on-tablet {
+      height: 72px;
+      width: 220px;
+      padding-top: 15px;
+    }
 
-  @include on-desktop {
-    width: 170px;
+    @include on-desktop {
+      width: 170px;
+    }
+
+    &--footer {
+      padding: 0;
+
+      @include on-tablet {
+        height: 72px;
+      }
+    }
   }
 
   &__img {
     width: 55px;
     height: 61px;
+
+    @include hover(transform, scale(1.05));
+  }
+
+  &__media {
+    display: flex;
+    gap: 20px;
+
+    @include on-tablet {
+      gap: 32px;
+    }
+  }
+
+  &__social {
+    text-decoration: none;
+    width: 24px;
+    height: 24px;
+
+    @include hover(transform, scale(1.05));
+  }
+
+  &__icon {
+    &:hover {
+      fill: $accent-color;
+    }
   }
 }
