--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -3,11 +3,9 @@
   background-color: transparent;
   transition: background-color 0.3s ease;
 
-  // &.dimmed {
-  //   background-color: rgba(0, 0, 0, 0.5);
-  // }
-
   &:has(.slider-menu:target) {
     overflow: hidden;
   }
+
+  height: 2000px;
 }
