--- a/src/styles/blocks/_slider-menu.scss
+++ b/src/styles/blocks/_slider-menu.scss
@@ -10,11 +10,11 @@
   z-index: 10;
   transition: all 0.3s;
 
-    &:target {
-      opacity: 1;
-      pointer-events: all;
-      transform: translateX(0);
-    }
+  &:target {
+    opacity: 1;
+    pointer-events: all;
+    transform: translateX(0);
+  }
 
   &__content {
     @include on-tablet {
@@ -35,7 +35,7 @@
     flex-direction: column;
 
     &::after {
-      content: "";
+      content: '';
       background-color: rgba(255, 255, 255, 0.5);
       width: 100%;
       height: 1px;
@@ -46,7 +46,7 @@
     }
 
     @include on-tablet {
-      padding-top: 40px;;
+      padding-top: 40px;
     }
   }
 
@@ -67,14 +67,14 @@
     display: flex;
     flex-direction: row;
     gap: 28px;
+  }
 
-    @include on-tablet {
-      gap: 20px;
-    }
+  @include on-tablet {
+    gap: 20px;
+  }
 
-    @include on-desktop {
-      gap: 31px;
-    }
+  @include on-desktop {
+    gap: 31px;
   }
 
   &__list {
@@ -106,9 +106,9 @@
   &__bottom {
     position: relative;
 
-    @include on-tablet{
+    @include on-tablet {
       &::before {
-        content: "";
+        content: '';
         background-color: #ffffff80;
         width: 1px;
         height: 145px;
@@ -144,7 +144,7 @@
         margin-bottom: 40px;
       }
 
-      @include on-desktop{
+      @include on-desktop {
         gap: 30px;
         margin-bottom: 48px;
       }
@@ -173,7 +173,7 @@
       margin-top: 16px;
       font-size: 14px;
       text-align: left;
-      color: rgba(255, 255, 255, 1);;
+      color: rgba(255, 255, 255, 1);
       line-height: 21px;
       padding-bottom: 27px;
 
