--- a/src/styles/blocks/_slider.scss
+++ b/src/styles/blocks/_slider.scss
@@ -3,54 +3,70 @@
   overflow: hidden;
   max-width: 100%;
 
+  @include on-desktop {
+    display: none;
+  }
+
   &__track {
     display: flex;
-    align-items: center;
     gap: 16px;
-    transition: transform 0.5s ease;
+    transition: transform 0.3s ease-in-out;
     width: calc(100% * 4);
+    margin-bottom: 129px;
+
+    @include on-tablet {
+      margin-bottom: 133px;
+    }
   }
 
   &__item {
-    flex: 0 0 25%;
-    padding: 0 8px;
+    flex-shrink: 0;
     box-sizing: border-box;
   }
 
   &__img {
     height: 410px;
-    object-fit: contain;
-    width: 100%;
+    object-fit: cover;
+    max-width: 280px;
+
+    @include on-tablet {
+      height: 543px;
+      max-width: 340px;
+    }
+  }
+
+  input {
+    display: none;
   }
 }
 
-input {
-  display: none;
-}
-
- #slide-1:checked ~ .slider__track {
+input.slick-1:checked ~ .slider__track {
   transform: translateX(0);
 }
 
- #slide-2:checked~.slider__track {
-  transform: translateX(-100%);
+input.slick-2:checked ~ .slider__track {
+  transform: translateX(calc(-1 * 280px));
 }
 
- #slide-3:checked~.slider__track {
-  transform: translateX(-200%);
+input.slick-3:checked ~ .slider__track {
+  transform: translateX(calc(-2 * 280px));
 }
 
- #slide-4:checked~.slider__track {
-  transform: translateX(-300%);
+input.slick-4:checked ~ .slider__track {
+  transform: translateX(calc(-3 * 280px));
 }
 
 .slick-navigation {
   position: absolute;
   transform: translateX(-50%);
   display: flex;
-  gap: 10px;
+  gap: 22px;
   left: 50%;
-  bottom: 10px;
+  bottom: 100px;
+
+  @include on-tablet {
+    bottom: 92px;
+  }
 
   label {
     width: 9px;
@@ -58,14 +74,18 @@ input {
     background: rgba(224, 224, 224, 1);
     border-radius: 50%;
     cursor: pointer;
-  }
 
-    #slide-1:checked~& label:nth-child(1),
-    #slide-2:checked~& label:nth-child(2),
-    #slide-3:checked~& label:nth-child(3),
-    #slide-4:checked~& label:nth-child(4) {
+    &:hover,
+    &:active,
+    &:focus {
       background: $accent-color;
     }
+  }
+
+  input.slick-1:checked ~ .slick-navigation label:nth-child(1),
+  input.slick-2:checked ~ .slick-navigation label:nth-child(2),
+  input.slick-3:checked ~ .slick-navigation label:nth-child(3),
+  input.slick-4:checked ~ .slick-navigation label:nth-child(4) {
+    background: $accent-color;
+  }
 }
-
-
