fixed some errors

--- a/src/styles/blocks/_slider-menu.scss
+++ b/src/styles/blocks/_slider-menu.scss
@@ -95,6 +95,10 @@
     }
   }
 
+  &__item {
+    @include hover(transform, scale(1.05));
+  }
+
   &__link {
     text-decoration: none;
     color: rgba(255, 255, 255, 1);
