--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -81,6 +81,13 @@
     }
   }
 
+  input:-webkit-autofill {
+    background-color: rgba(240, 255, 240, 1);
+    border: 1px solid $second-accent-color;
+    -webkit-box-shadow: 0 0 0px 1000px rgb(26 90 76 / 26%) inset;
+    color: rgba(34, 34, 34, 1);
+  }
+
   &__button {
     border: none;
     height: 50px;
