--- a/src/styles/blocks/main-info.scss
+++ b/src/styles/blocks/main-info.scss
@@ -1,5 +1,6 @@
 .main {
   @include page-grid;
+
   grid-column: 1 / -1;
   margin-top: 70px;
 
@@ -57,7 +58,7 @@
       }
 
       &-title {
-        font-family: 'Montserrat', sans-serif;
+        font-family: Montserrat, sans-serif;
         font-size: 28px;
         display: flex;
         align-items: center;
@@ -102,11 +103,47 @@
     }
 
     &-info {
+      z-index: 1;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      gap: 20px;
+      text-align: center;
+      position: relative;
       grid-column: 1 / -1;
-      background-color: #fff;
+      background-color: white;
       height: 140px;
-      border-bottom: 2px solid #000;
-      margin-top: -153px;
+      margin-top: -50px;
+      margin-inline: 20px;
+      border-bottom: 2px solid #1a5a4c40;
+
+      &-data {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-top: 20px;
+      }
+
+      &-title {
+        font-weight: 400;
+        font-size: 28px;
+        text-align: center;
+      }
+    }
+  }
+
+  &__galery {
+    @include page-grid;
+
+    grid-column: 1 / -1;
+    margin-bottom: 50px;
+    &-title {
+      grid-column: 1 / -1;
+      font-size: 36px;
+      font-weight: 700;
+      color: #0F0E08;
+      margin-top: 100px;
+      text-align: center;
     }
   }
 }
