--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,4 +7,5 @@
 @import '../styles/blocks/menu';
 @import '../styles/blocks/page';
 @import '../styles/blocks/main-info';
+@import '../styles/blocks/slider';
 
