museum is built

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,48 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin on-tablet {
+  @media (min-width: $w-tablet) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: $w-desktop) {
+    @content;
+  }
+}
+
+@mixin on-max-width {
+  @media (min-width: $w-max) {
+    @content;
+  }
+}
+
+@mixin grid-net {
+  --columns: 2;
+
+  display: grid;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include on-tablet {
+    --columns: 6;
+  }
+
+  @include on-desktop() {
+    --columns: 12;
+  }
+}
+
+.paddings {
+  padding-inline: 20px;
+  max-width: $w-mobile;
+  margin-inline: auto;
+
+  @include on-tablet {
+    padding-inline: 34px;
+    max-width: $w-tablet;
+  }
+
+  @include on-desktop {
+    padding-inline: 55px;
+    max-width: $w-max;
   }
 }
