--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
+$w-mobile: 320px;
+$w-tablet: 700px;
+$w-desktop: 1280px;
+$w-max: 1440px;
+
 $c-gray: #eee;
+$c-black: #0F0E08;
+$c-green: #1A5A4C;
+$c-small-title-grey: #687480;
+$c-paragraph-grey: #4E4E4E;
+$c-orange: #F14A27;
+$t-400: 400ms;
