--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,50 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
+@import './utils';
+@import './fonts';
+@import './typography';
+@import './elements/burger-menu';
+@import './components/menu';
+@import './components/header';
+@import './components/events';
+@import './components/lection';
+@import './components/subscribe';
+@import './components/footer';
+@import './components/gallery';
 
-body {
-  background: $c-gray;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.body {
+  position: relative;
+
+  &--no-scroll {
+    overflow: hidden;
+  }
+
+  &_background {
+    width: 100%;
+    height: 100vh;
+    background-color: $c-black;
+    opacity: 0.6;
+    z-index: 1;
+    position: absolute;
+
+    &--not-visible {
+      display: none;
+    }
+  }
+
+  &_menu {
+    position: fixed;
+    z-index: 1;
+  }
+}
+
+a {
+  text-decoration: none;
 }
