making header - almost finished background

--- a/src/styles/blocks/_container.scss
+++ b/src/styles/blocks/_container.scss
@@ -1,6 +1,9 @@
 .container {
   max-width: 1440px;
+  width: 100%;
   padding-inline: 55px;
+  box-sizing: border-box;
+  margin-inline: auto;
 
   @include tablet {
     padding-inline: 39px;
