--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,3 +1,9 @@
+@mixin desktop {
+  @media(max-width: 1440px) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media(max-width: 1280px) {
     @content;
@@ -7,5 +13,11 @@
 @mixin phone {
   @media(max-width: 640px) {
     @content;
+  }
+}
+
+@mixin height-header-background {
+  @include desktop {
+    min-height: 100vh;
   }
 }
