--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,31 +1,60 @@
 .header {
-  min-height: 100vh;
-  display: flex;
-  justify-content: space-between;
-  gap: 30px;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
 
-  &__side-l {
-    padding: 39px 30px 0 55px;
+  &__content {
+    max-width: 1440px;
+    min-height: 734px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    position: relative;
+
+    @include height-header-background;
   }
 
-  &__block {
+  &__top {
+    max-width: 694px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__left-wrap {
+    position: relative;
+    z-index: 1;
+    background-color: $white-color;
+
+    align-self: flex-start;
+    flex-grow: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  &__info {
+    max-width: 500px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 89px;
+    background-color: $white-color;
+
+    position: relative;
+    z-index: 1;
+    padding-right: 30px;
   }
 
   &__title {
-    margin: 0;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 72px;
     font-weight: 700;
   }
 
-  &__block-footer {
+  &__info-footer {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -53,20 +82,16 @@
     }
   }
 
-  &__side-r {
-    max-width: 725px;
-    width: 100%;
+  &__background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 56.64%;
+    height: 734px;
+    object-fit: cover;
+    object-position: bottom;
+    z-index: -1;
 
-    background-image: url(../images/header-background-image.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  }
-
-  &__container-r {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    padding: 15px 55px 0;
+    @include height-header-background;
   }
 }
