--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -41,8 +41,12 @@
       width: 100%;
 
       &_container {
-        align-self: flex-start;
+        align-self: center;
         margin-bottom: 20px;
+
+        @include on-tablet {
+          align-self: flex-start;
+        }
 
         @include on-desktop {
           margin-bottom: 118;
@@ -133,6 +137,8 @@
   &_burger-menu {
     margin-top: 30px;
     margin-left: 20px;
+    width: 20px;
+    height: 14px;
 
     &--phone {
       @include on-tablet {
