--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -64,6 +64,23 @@
         font-weight: 500;
         line-height: 16px;
         color: #fff;
+        position: relative;
+        transition: $t-400;
+
+        &::after {
+          content: '';
+          position: absolute;
+          left: 0;
+          bottom: -10px;
+          width: 0;
+          height: 1px;
+          background-color: #fff;
+          transition: $t-400;
+        }
+
+        &:hover::after {
+          width: 100%;
+        }
 
         @include on-desktop {
           font-size: 22px;
