--- a/src/styles/components/subscribe.scss
+++ b/src/styles/components/subscribe.scss
@@ -72,6 +72,7 @@
         outline: none;
         border: none;
         height: 15px;
+        width: 100%;
 
         &::placeholder {
           font-family: Montserrat;
