--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -21,6 +22,9 @@ html {
 
 .body {
   position: relative;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
 
   &--no-scroll {
     overflow: hidden;
