new height for input

--- a/src/styles/components/subscribe.scss
+++ b/src/styles/components/subscribe.scss
@@ -71,7 +71,7 @@
       &-input {
         outline: none;
         border: none;
-        height: 15px;
+        height: 100%;
         width: 100%;
 
         &::placeholder {
