--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -100,9 +100,12 @@
       border-left: 1px solid #fff;
       height: auto;
       width: 1px;
-      margin-inline: 38px;
+      margin-inline: 50px;
       margin-bottom: 0;
-      margin-left: 200px;
+    }
+
+    @include on-desktop {
+      margin-left: 100px;
     }
   }
 
