--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -17,16 +17,34 @@
     @include grid-net;
 
     gap: 16px;
-    margin-bottom: 100px;
+    margin-bottom: 32px;
+
+    @include on-tablet {
+      display: flex;
+      overflow: visible;
+      transition: transform $t-400 ease;
+    }
 
     @include on-desktop {
+      @include grid-net;
+
+      transform: translateX(0);
       gap: 30px;
+      margin-bottom: 200px;
     }
 
     &_photo {
       grid-column: 1 / -1;
       width: 100%;
       transition: $t-400;
+
+      @include on-tablet {
+        width: 50%;
+      }
+
+      @include on-desktop {
+        width: 100%;
+      }
 
       &--big {
         display: none;
@@ -76,6 +94,38 @@
 
       &:hover {
         transform: scale(1.05);
+      }
+    }
+  }
+
+  &_btns {
+    display: none;
+    justify-content: center;
+    gap: 22px;
+    margin-bottom: 100px;
+
+    @include on-tablet {
+      display: flex;
+    }
+
+    @include on-desktop {
+      display: none;
+    }
+
+    &_btn {
+      width: 9px;
+      height: 9px;
+      background-color: $c-grey-btn;
+      border-radius: 50%;
+      transition: transform $t-400 ease;
+      cursor: pointer;
+
+      &:hover {
+        transform: scale(2);
+      }
+
+      &--active {
+        background-color: $c-green;
       }
     }
   }
