--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -1,4 +1,6 @@
 .gallery {
+  overflow: hidden;
+
   &_title {
     font-family: Montserrat;
     font-size: 36px;
@@ -21,7 +23,6 @@
 
     @include on-tablet {
       display: flex;
-      overflow: visible;
       transition: transform $t-400 ease;
     }
 
