--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -139,6 +139,11 @@
     margin-left: 20px;
     width: 20px;
     height: 14px;
+    transition: $t-400;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     &--phone {
       @include on-tablet {
