--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -41,6 +41,11 @@
       width: 18px;
       height: 18px;
       cursor: pointer;
+      transition: $t-400;
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
 
     &_wrapper {
