--- a/src/styles/components/subscribe.scss
+++ b/src/styles/components/subscribe.scss
@@ -42,16 +42,17 @@
       display: flex;
       height: 50px;
       transition: $t-400;
+      display: flex;
+      align-items: center;
+      gap: 16px;
 
       @include on-tablet {
         width: 460px;
         height: 70px;
-        gap: 16px;
       }
 
       @include on-tablet {
         width: 570px;
-        gap: 30px;
       }
 
       &:hover {
@@ -59,18 +60,11 @@
         -moz-box-shadow: 0px 0px 37px -10px rgba(241, 74, 39, 1);
         box-shadow: 0px 0px 37px -10px rgba(241, 74, 39, 1);
       }
-    }
 
-    &_email {
-      padding-left: 25px;
-      display: flex;
-      align-items: center;
-      background-color: #fff;
-      flex-grow: 1;
-
-      &-input {
+      &_input {
         outline: none;
         border: none;
+        padding-left: 25px;
         height: 100%;
         width: 100%;
 
@@ -81,25 +75,27 @@
           color: $c-small-title-grey;
         }
       }
-    }
 
-    &_submit {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      outline: none;
-      width: 50px;
-      border: none;
-      background-color: $c-orange;
-      cursor: pointer;
+      &_submit {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        outline: none;
+        width: 50px;
+        height: 50px;
+        border: none;
+        background-color: $c-orange;
+        cursor: pointer;
 
-      @include on-tablet {
-        width: 70px;
-      }
+        @include on-tablet {
+          width: 70px;
+          height: 70px;
+        }
 
-      &_arrow {
-        width: 8px;
-        height: 12px;
+        &_arrow {
+          width: 8px;
+          height: 12px;
+        }
       }
     }
   }
