--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,13 +18,29 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: none;
+  -webkit-text-fill-color: $c-orange;
+  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+  background: none;
+  transition: background-color $t-400 ease-in-out 0s;
 }
 
 .body {
   position: relative;
   padding: 0;
   width: 100%;
-  overflow-x: hidden;
 
   &--no-scroll {
     overflow: hidden;
